<resources>
    <string name="app_name">FireAuthenticationTest</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="emailsgn">Sign in with email</string>
    <string name="google">Sign in with Google</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="twitter">Sign in with Twitter</string>
    <string name="git">Sign in with GitHub</string>
    <string name="signout">Sign Out</string>
    <string name="facebook_app_id">616208608562898</string>
    <string name="fb_login_protocol_scheme">fb616208608562898</string>
    <string name="post">Post in fb</string>

</resources>
